[gd_scene load_steps=3 format=3 uid="uid://hln8ohgt64ft"]

[ext_resource type="Script" uid="uid://cmgprsikgcclt" path="res://scripts/ui/hud.gd" id="1_0mwgc"]
[ext_resource type="AudioStream" uid="uid://dgtxpm2ycivcy" path="res://assets/sounds/sfx/level_up.wav" id="2_hqnrr"]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0mwgc")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_top = 792.0
offset_right = 488.0
offset_bottom = 1088.0

[node name="Background" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = 904.0
offset_right = 274.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 48.0
offset_top = -232.0
offset_right = 432.0
offset_bottom = -40.0
grow_vertical = 0

[node name="HealthLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Health"

[node name="HealthBar" type="ProgressBar" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
step = 1.0
value = 100.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ExpLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "EXP"

[node name="LvlLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "LVL "

[node name="ExpBar" type="ProgressBar" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_hqnrr")
bus = &"SFX"
